--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -103,7 +103,7 @@ $theme-colors: map-merge(
     "color3":     $color3,
     "color4":     $color4,
     "color5":     $color5,
-    "dark-blue":  $dark-blue
+    "dark-blue":  $dark-blue,
   ),
   $theme-colors
 );
