--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: "spectre";
+  src: url("../fonts/Spectral-Regular.ttf"); }
+.women1 {
+  z-index: 10 !important;
+  float: left; }
+
+.women2 {
+  padding: 0px;
+  margin-left: -30px;
+  z-index: 15 !important; }
+
 #coord-bar i.fa {
   color: #db2574;
   padding: 10px 5px;
@@ -8,4 +20,4 @@
   color: #fff; }
 
 .home-cover {
-  height: 695px; }
+  height: 684px; }
