--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,4 +1,12 @@
+.container,.container-fluid,.row {
+    padding:0px !important;
+}
 .navbar-brand {
     color: white;
     padding-left:15px;
+}
+h1 {
+ font-family:"spectre";
+ color:#fff;
+ font-size:3em;
 }
