--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,17 @@
+@font-face {
+ font-family: "spectre";
+ src: url("../fonts/Spectral-Regular.ttf");
+}
 
+.women1 {
+  z-index:10 !important;
+  float:left;
+}
+.women2 {
+    padding:0px;
+    margin-left:-30px;
+    z-index:15 !important;
+}
 #coord-bar {
 
     i.fa{
@@ -16,5 +29,5 @@
    
 }
 .home-cover {
- height:695px;
+ height:684px;
 }
