--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -33,7 +33,7 @@ $grays: map-merge(
   ),
   $grays
 );
-$color1: rgba(219, 37, 116, 1);
+$color1: rgb(175, 36, 96);
 $color2: rgba(237, 123, 132, 1);
 $color3: rgba(245, 219, 203, 1);
 $color4: rgba(198, 162, 71, 1);
