--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,20 +1,33 @@
-.container,.container-fluid,.row {
-    padding:0px !important;
-    margin:0px !important;
-}
-.navbar-brand {
-    color: white;
-    padding-left:15px;
-}
-h1 {
- font-family:"spectre";
- color:#fff;
- font-size:3em;
+.container,
+.container-fluid,
+.row {
+    padding: 0px !important;
+    margin: 0px !important;
 }
 
-.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus,.navbar-light .navbar-brand,
-.navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link,
-.navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active,
-.navbar-light .navbar-nav .nav-link  {
-    color:#fff;
+.navbar-brand {
+    color: white;
+    padding-left: 15px;
+}
+
+h1 {
+    font-family: "spectre";
+    color: #fff;
+    size: 38px;
+}
+
+.navbar-light .navbar-brand:hover,
+.navbar-light .navbar-brand:focus,
+.navbar-light .navbar-brand,
+.navbar-light .navbar-nav .show>.nav-link,
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link {
+    color: #fff;
+}
+
+.jumbotron {
+    width: 100%;
+    text-align: right;
 }
