--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,45 +1,56 @@
 @font-face {
- font-family: "spectre";
- src: url("../fonts/Spectral-Regular.ttf");
+  font-family: "spectre";
+  src: url("../fonts/Spectral-Regular.ttf");
 }
 
 .women1 {
-  z-index:10 !important;
-  float:left;
+  z-index: 10 !important;
+  float: left;
 }
+
 .women2 {
-    padding:0px;
-    margin-left:-25px;
-    z-index:15 !important;
+  padding: 0px;
+  margin-left: -25px;
+  z-index: 15 !important;
 }
+
 #coord-bar {
 
-    i.fa{
-        color : rgba(219, 37, 116, 1);
-        padding:10px 5px;
-        align-self:center; 
-    }
-    i.fa:hover{
-        color:#fff;
-    }
-    span a{
-        color: #fff;
- 
-    }
-   
-}
-.parallax-container {
-  padding:0;
-  width: 100%;
-  height:80vh;
-  overflow: hidden;
-  background-color:red;
-  position:relative;
-  display:block;
+  i.fa {
+    color: rgba(219, 37, 116, 1);
+    padding: 10px 5px;
+    align-self: center;
+  }
 
- }
-.home-parallax-1, .home-parallax-2, .home-parallax-3, .slogan {
+  i.fa:hover {
+    color: #fff;
+  }
+
+  span a {
+    color: #fff;
+
+  }
+
+}
+
+.parallax-container {
+  padding: 0;
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+  position: relative;
+  display: block;
+
+}
+
+.home-parallax-1,
+.home-parallax-2,
+.home-parallax-3,
+.home-parallax-4,
+.home-parallax-5,
+.slogan {
   transform: translateY(0px);
+  opacity: 1;
   transform: all;
 }
 
@@ -49,27 +60,72 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 80vh;
-  width: 100%; 
+  width: 100%;
   overflow: hidden;
 }
+
 .home-parallax-2 {
-  position:absolute;
-  background-image:url("../media/women1.png");
+  position: absolute;
+  background-image: url("../media/women1.png");
   background-repeat: no-repeat;
-  height:80vh;
-  width:100%;
+  height: 80vh;
+  width: 100%;
 }
+
 .home-parallax-3 {
-  position:absolute;
-  left:28vw;
-  background-image:url("../media/women2.png");
+  position: absolute;
+  left: 28vw;
+  background-image: url("../media/women2.png");
   background-repeat: no-repeat;
-  height:80vh;
-  width:100%;
+  height: 80vh;
+  width: 100%;
 }
+
 .slogan {
-  text-align:center;
-  position:absolute;
-  top:28vh;
-  left:60vw;;
+  text-align: center;
+  position: absolute;
+  top: 28vh;
+  left: 60vw;
+  ;
+}
+
+.card-group {
+  .card {
+    text-align: center;
+  }
+
+  .fa {
+    color: red;
+    ;
+  }
+}
+
+.section-mag {
+  .jumbotron {
+    position: relative;
+    width: 100%;
+    color: #000;
+    text-align: center;
+  }
+}
+
+.home-parallax-4 {
+  position: absolute;
+  left: 0w;
+  background-image: url("../media/mag-parallax.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 80vh;
+  width: 100%;
+}
+
+.home-parallax-5 {
+  position: absolute;
+  left: 40vw;
+  top: -38vh;
+  background-image: url("../media/mag.png");
+  background-repeat: no-repeat;
+  background-size: 40%;
+  height: 80vh;
+  width: 100%;
 }
